# yolov8-csv-to-yolo

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  model-card.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: dataset_format.md  usage_guide.md
examples/: quick_start.py  sample_annotations.csv  sample_annotations_b.csv  sample_annotations_c.csv
huggingface/: README.md
notebooks/: YOLOv8_Professional_Pipeline.ipynb
scripts/: convert_csv_to_yolo.py  predict.py  train.py
src/yolov8_pipeline/: __init__.py  converter.py  parser.py  visualizer.py
